Mon, Aug 26, 2024, 12:26 AM +05:30

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .header {
-    background-color: #477bff;
+    background-color: orange;
     color: #fff;
     margin-bottom: 2rem;
     padding: 2rem 1rem;
