Mon, Aug 26, 2024, 12:36 AM +05:30

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -36,6 +36,9 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 48px;
 }
+hr{
+    
+}
 
 button, input[type="submit"] {
     background-color: #d9edff;
