Mon, Aug 26, 2024, 12:38 AM +05:30

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -37,7 +37,8 @@ h1 {
     font-size: 48px;
 }
 hr{
-    
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2px;
 }
 
 button, input[type="submit"] {
