Mon, Aug 26, 2024, 12:39 AM +05:30

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -38,7 +38,7 @@ h1 {
 }
 hr{
     font-family: 'Montserrat', sans-serif;
-    font-size: 2px;
+    font-size: ;
 }
 
 button, input[type="submit"] {
