--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -38,7 +38,7 @@ h1 {
 }
 hr{
     font-family: 'Montserrat', sans-serif;
-    font-size: ;
+    font-size:20px ;
 }
 
 button, input[type="submit"] {
