Mon, Aug 26, 2024, 4:05 PM +05:30

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -34,11 +34,11 @@ body {
 
 h1 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 48px;
+    font-size: large;
 }
 hr{
     font-family: 'Montserrat', sans-serif;
-    font-size:20px ;
+    font-size:large;
 }
 
 button, input[type="submit"] {
