Mon, Aug 26, 2024, 4:24 PM +05:30

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -34,11 +34,7 @@ body {
 
 h1 {
     font-family: 'Montserrat', sans-serif;
-    font-size: large;
-}
-hr{
-    font-family: 'Montserrat', sans-serif;
-    font-size:large;
+    font-size: 48px;
 }
 
 button, input[type="submit"] {
