Mon, Nov 4, 2024, 6:40 PM +05:30

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -1,4 +1,7 @@
-.navbar.bg-primary .navbar-nav{
+.navbar.bg-primary .navbar-nav .nav-link{
     color: white;
 }
 
+.navbar.bg-primary .navbar-nav .nav-link:hover{
+    color: grey;
+}
