Mon, Nov 4, 2024, 6:45 PM +05:30

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -5,3 +5,7 @@
 .navbar.bg-primary .navbar-nav .nav-link:hover{
     color: lightgrey;
 }
+
+.navbar.bg-primary .navbar-nav .nav-link.active[aria-current="page"] {
+    color: ;
+}
