--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -3,9 +3,9 @@
 }
 
 .navbar.bg-primary .navbar-nav .nav-link:hover{
-    color: lightgrey;
+    color: red;
 }
 
 .navbar.bg-primary .navbar-nav .nav-link.active[aria-current="page"] {
-    color: grey;
+    color: ;
 }
