--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -5,9 +5,12 @@ body{
 
 #me{
     padding: 20px;
+}
+
+#me_jpg{
     float:left;
-    width:20px;
-    height:20px;
+    width:620px;
+    height:420px;
 }
 
 .navbar.bg-primary .navbar-nav .nav-link{
