Fri, Nov 8, 2024, 1:08 AM +05:30

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -4,10 +4,10 @@ body{
 }
 
 #me{
-    padding: 0px;
+    padding: 20px;
 }
 
-#me_jpg{
+#me-jpg{
     float:left;
     width:750px;
     height:550px;
