Fri, Nov 8, 2024, 1:09 AM +05:30

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -13,6 +13,10 @@ body{
     height:550px;
 }
 
+#me-text{
+    padding: 20px;
+}
+
 .navbar.bg-primary .navbar-nav .nav-link{
     color: white;
 }
