Fri, Nov 8, 2024, 1:24 AM +05:30

--- a/homepage/styles.css
+++ b/homepage/styles.css
@@ -4,6 +4,7 @@ body{
 }
 
 #me{
+    overflow: auto;
     padding: 20px;
 }
 
@@ -15,6 +16,7 @@ body{
 }
 
 #me-text{
+    overflow: hidden;
     padding: 20px;
 }
 
